# vapi-voice-ops-mcp

./: .env.example  .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: create-reservation-call.json  mcp-server-config.json
src/: config.ts  index.ts  normalize.ts  types.ts
src/storage/: files.ts
src/tools/: createReservationCall.ts  getCallStatus.ts  listRecentCalls.ts  processLatestWebhook.ts
src/vapi/: client.ts  prompts.ts
src/webhook/: server.ts
