[project]
name = "vapi-voice-ops-mcp"
version = "0.1.0"
description = "A Dedalus-compatible MCP server that gives agents reusable voice operations on top of Vapi."
requires-python = ">=3.11"
dependencies = [
  "dedalus-mcp",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
